[tool.poetry]
name = "screenplays"
version = "0.1.0"
description = "Scrape screenplays form the web"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
convertapi = "^1.5.0"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
